# bab-test

./: .env.example  .gitignore  ACCESS_INFO.md  CHANGES_SUMMARY.md  CLINE_SETUP.md  Dockerfile.backend  Dockerfile.frontend  FIXES_COMPLETE.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MISTRAL_ROUTING_GUIDE.md  Makefile  QUICK_START_CN.md  README.md  README_START_HERE_CN.md  ROUTES_AND_502_FIXES.md  ROUTE_CONFIG_PROVIDER_MODEL_AUTO_CYCLE.md  SUMMARY_CN.md  TEST_RESULTS_CN.md  create_provider.py  docker-compose.yml  docker-entrypoint.sh  final_test.sh  final_verification.sh  frontend_supplier_api_investigation_report.md  nginx.conf  start_services.sh  test_basic.py  test_cline_integration.py  test_complete.py  test_final.py  test_fixes.py  test_flush.py  test_frontend_backend_params.py  test_frontend_cleaning.py  test_frontend_detailed_params.py  test_mistral.sh  test_mistral_endpoint.py  (+4 more)
backend/: pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/routes/: admin.py  chat.py  providers.py  routes.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  models.py  session.py
backend/app/schemas/: chat.py  openai.py  provider.py  route.py
backend/app/services/: __init__.py  backup.py  chat.py  chat_completions.py  health_checker.py  logging.py  metrics.py  providers.py  routing.py
backend/backend/: config_backup.json
backend/tests/: conftest.py  test_api_key_masking.py  test_chat_completions.py  test_health_checker.py  test_providers.py  test_routing.py
(+33 files in other folders)
