[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-provider-backend"
version = "0.1.0"
description = "FastAPI backend for managing external LLM provider configurations"
authors = [{ name = "LLM Platform Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104,<0.111",
    "uvicorn[standard]>=0.23,<0.26",
    "sqlalchemy>=2.0,<3.0",
    "pydantic>=2.3,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.25,<0.28",
    "cryptography>=41,<43",
    "python-dotenv>=1.0,<2.0",
    "alembic>=1.12,<2.0",
    "python-multipart>=0.0.6,<1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-asyncio>=0.21,<0.24",
    "anyio>=3.7,<4.0",
    "httpx>=0.25,<0.28"
]

[tool.setuptools.packages.find]
include = ["backend", "backend.*"]
